--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./favicon.ico" />
+  </head>
+  <body>
     <header>
-        <h1>Rock Paper Scissors</h1>
+      <h1>Rock Paper Scissors</h1>
     </header>
 
     <div class="score-board">
-        <div id="user-label" class="badge">User</div>
-        <div id="computer-label" class="badge">Comp</div>
-        <span id="user-score">0</span>:<span id="computer-score">0</span>
+      <div id="user-label" class="badge">User</div>
+      <div id="computer-label" class="badge">Comp</div>
+      <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
 
     <div class="result">
-        <p>Paper covers rock. You win!</p>
+      <p>Paper covers rock. You win!</p>
     </div>
 
     <div class="choices">
-        <div class="choice" id="r">
-            <img src="images/rock.png" alt="rock" width="100" height="100">
-        </div>
-        <div class="choice" id="p">
-            <img src="images/paper.png" alt="paper" width="100" height="100">
-        </div>
-        <div class="choice" id="s">
-            <img src="images/scissors.png" alt="scissors" width="100" height="100">
-        </div>
+      <div class="choice" id="r">
+        <img src="images/rock.png" alt="rock" width="100" height="100" />
+      </div>
+      <div class="choice" id="p">
+        <img src="images/paper.png" alt="paper" width="100" height="100" />
+      </div>
+      <div class="choice" id="s">
+        <img
+          src="images/scissors.png"
+          alt="scissors"
+          width="100"
+          height="100"
+        />
+      </div>
     </div>
 
     <p id="action-message">Make your move.</p>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
